--- a/Xvidros.html
+++ b/Xvidros.html
@@ -32,6 +32,6 @@
             <iframe src="https://www.xvideos.com/embedframe/63026465" frameborder=0 width=400 height=250 scrolling=no allowfullscreen=allowfullscreen></iframe>
             <iframe src="https://www.xvideos.com/embedframe/58134129" frameborder=0 width=400 height=250 scrolling=no allowfullscreen=allowfullscreen></iframe>
     </main>
-    <footer><h3>Feito e produzido por: <a href="https://www.facebook.com/francisco.garbi.395/" target="_blank" rel="external">Francisco</h3> <p>site versão 3.0</p></footer>
+    <footer><h3>Site versão</h3></footer>
 </body>
 </html>
