--- a/Xvidros.html
+++ b/Xvidros.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Site Xvidros</h1>
-        <nav><a href="parte2/parte2.html">linksmega</a>  <a href="audios/parte3.html">Audios</a></nav>
+        <nav><a href="Megalinks/Xvidros.html">linksmega</a>  <a href="Audiosgostoso/Audios.html">Audios</a></nav>
     </header>
     <main>
         <h1>Assista Agora &#x1F447</h1>
