--- a/Audiosgostoso/Audios.html
+++ b/Audiosgostoso/Audios.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1>Site Xvidros</h1>
-        <nav><a href="../index.html">Volte</a>  <a href="../parte2/parte2.html">linksmega</a><a href="audios/parte3.html"></a></nav>
+        <nav><a href="../Xvidros.html">Volte</a>  <a href="../Megalinks/Xvidros.html">linksmega</a></nav>
     </header>
     <main>
         <h1>Audios</h1>
