--- a/Megalinks/Xvidros.html
+++ b/Megalinks/Xvidros.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1>Site Xvidros</h1>
-        <nav><a href="../index.html">Volte</a>  <a href="../audios/parte3.html">Audios</a><a href=""></a></nav>
+        <nav><a href="../Xvidros.html">Volte</a>  <a href="../Audiosgostoso/Audios.html">Audios</a><a href=""></a></nav>
     </header>
     <main>
             <p>Links Mega &#x1F604</p>
